--- a/SutranWeb/packages.config
+++ b/SutranWeb/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DocumentFormat.OpenXml" version="2.8.1" targetFramework="net40" />
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.9.2" targetFramework="net40" />
   <package id="jQuery-Timepicker-Addon" version="1.6.3" targetFramework="net40" />
