--- a/SutranWeb/Web.config
+++ b/SutranWeb/Web.config
@@ -9,7 +9,8 @@
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
 		<section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration"/>
 	</configSections>
-	<entityFramework>
+	
+    <entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
 			<parameters>
 				<parameter value="mssqllocaldb"/>
@@ -19,12 +20,15 @@
 			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
 		</providers>
 	</entityFramework>
-	<unity configSource="Configuration\unity.config"/>
+	
+    <unity configSource="Configuration\unity.config"/>
 	<connectionStrings>
-		<add name="SUTRANEntities" connectionString="metadata=res://*/ModelSutran.csdl|res://*/ModelSutran.ssdl|res://*/ModelSutran.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DESKTOP-QNKRE8K;Initial Catalog=SUTRAN;Persist Security Info=True;User ID=sa;Password=campoy;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
+		<add name="SUTRANEntities" connectionString="metadata=res://*/ModelSutran.csdl|res://*/ModelSutran.ssdl|res://*/ModelSutran.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DESKTOP-QNKRE8K;Initial Catalog=SUTRANPROD;Persist Security Info=True;User ID=sa;Password=campoy;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
 	</connectionStrings>
-	<system.web>
-		<compilation debug="true" targetFramework="4.0">
+	
+    <system.web>
+        <globalization culture="en-US" uiCulture="en-US" />
+        <compilation debug="true" targetFramework="4.0">
 			<assemblies>
 				<add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
 				<add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></assemblies></compilation>
