--- a/SutranWeb/SutranWeb.csproj
+++ b/SutranWeb/SutranWeb.csproj
@@ -151,6 +151,7 @@
     <Content Include="Content\themes\metroblue\jtablesite.js" />
     <Content Include="FrmMantenimientoFlota.aspx" />
     <Content Include="FrmReporteFlota.aspx" />
+    <Content Include="FrmReporteHorometro.aspx" />
     <Content Include="images\edit.png" />
     <Content Include="Scripts\i18n\jquery-ui-timepicker-addon-i18n.js" />
     <Content Include="Scripts\i18n\jquery-ui-timepicker-addon-i18n.min.js" />
@@ -347,6 +348,13 @@
     </Compile>
     <Compile Include="FrmMantenimientoFlota.aspx.designer.cs">
       <DependentUpon>FrmMantenimientoFlota.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="FrmReporteHorometro.aspx.cs">
+      <DependentUpon>FrmReporteHorometro.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FrmReporteHorometro.aspx.designer.cs">
+      <DependentUpon>FrmReporteHorometro.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\UnityLoad.cs" />
