--- a/SutranWeb/Web.config
+++ b/SutranWeb/Web.config
@@ -23,7 +23,7 @@
 	
     <unity configSource="Configuration\unity.config"/>
 	<connectionStrings>
-		<add name="SUTRANEntities" connectionString="metadata=res://*/ModelSutran.csdl|res://*/ModelSutran.ssdl|res://*/ModelSutran.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DESKTOP-QNKRE8K;Initial Catalog=SUTRAN;Persist Security Info=True;User ID=sa;Password=campoy;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
+		<add name="SUTRANEntities" connectionString="metadata=res://*/ModelSutran.csdl|res://*/ModelSutran.ssdl|res://*/ModelSutran.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DESKTOP-QNKRE8K;Initial Catalog=SUTRANPROD;Persist Security Info=True;User ID=sa;Password=campoy;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
 	</connectionStrings>
 	
     <system.web>
